# scaper

./: pyproject.toml  setup.py
docs/: conf.py
